[package]
name = "tracing-for-pyo3-logging"
version = "0.0.7"
authors = ["Daniel Schemmel <daniel@schemmel.net"]
description = "Enables `tracing` for pyo3-based embedded Python applications using Python's `logging` module."
publish = ["crates-io"]
repository = "https://github.com/danielschemmel/tracing-for-pyo3-logging/"
license = "MIT OR Apache-2.0"
readme = "README.md"

edition = "2021"
rust-version = "1.58.0"

[features]
default = []
log = ["tracing/log"]

[dependencies]
pyo3 = "0.27.1"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"

[build-dependencies]
